basic timer working to drive rgb led

--- a/rainbow/Makefile
+++ b/rainbow/Makefile
@@ -1,7 +1,7 @@
 rainbow.bin: rainbow.elf
 	arm-none-eabi-objcopy -Obinary rainbow.elf rainbow.bin
-rainbow.elf: rainbow.o vectors.o startup.o ../common/trinket.ld
-	arm-none-eabi-ld -Map rainbow.map -T../common/trinket.ld -o rainbow.elf startup.o rainbow.o vectors.o -print-memory-usage -nostdlib
+rainbow.elf: rainbow.o timer.o vectors.o startup.o ../common/trinket.ld
+	arm-none-eabi-ld -Map rainbow.map -T../common/trinket.ld -o rainbow.elf startup.o timer.o rainbow.o vectors.o -print-memory-usage -nostdlib
 	arm-none-eabi-objdump -t rainbow.elf
 startup.o: ../common/startup.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb ../common/startup.s -o startup.o
@@ -11,8 +11,10 @@ rainbow.o: rainbow.c
 	arm-none-eabi-gcc  -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -I../common -mthumb -c rainbow.c -o rainbow.o
 buffer.o: buffer.c
 	arm-none-eabi-gcc  -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c buffer.c -o buffer.o
+timer.o: timer.c
+	arm-none-eabi-gcc  -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c timer.c -o timer.o
 clean:
-	rm startup.o rainbow.elf rainbow.bin rainbow.o rainbow.map vectors.o buffer.o
+	rm startup.o rainbow.elf rainbow.bin rainbow.o rainbow.map vectors.o  timer.o
 debug:
 	openocd -f /usr/share/openocd/scripts/interface/jlink.cfg -c "transport select swd" -f /usr/share/openocd/scripts/target/at91samdXX.cfg
 flash:
