move gpio struct to new module, update blinky to test

--- a/blink/Makefile
+++ b/blink/Makefile
@@ -8,7 +8,7 @@ startup.o: ../common/startup.s
 vectors.o: ../common/vectors.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb  ../common/vectors.s -o vectors.o
 blink.o: blink.c
-	arm-none-eabi-gcc  -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c blink.c -o blink.o
+	arm-none-eabi-gcc  -Wall  -g -nostdlib -nostartfiles -I../common -mcpu=cortex-m0plus -mthumb -c blink.c -o blink.o
 clean:
 	rm startup.o blink.elf blink.bin blink.o blink.map vectors.o
 debug:
