first steps in adc module to control framerate of gol

--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,7 +1,7 @@
 conway.bin: conway.elf
 	arm-none-eabi-objcopy -Obinary conway.elf conway.bin
-conway.elf: fsm.o clock.o i2c.o display.o life.o conway.o vectors.o startup.o ../common/trinket.ld
-	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -o conway.elf startup.o fsm.o clock.o i2c.o display.o life.o conway.o vectors.o -print-memory-usage -nostdlib
+conway.elf: fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o startup.o ../common/trinket.ld
+	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -o conway.elf startup.o fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib
 	arm-none-eabi-objdump -t conway.elf
 startup.o: ../common/startup.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb ../common/startup.s -o startup.o
@@ -13,6 +13,8 @@ life.o: ../../../conway/life/life.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../../../conway/life/life.c -o life.o -ffreestanding
 fsm.o: ../stateengine/src/fsm.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -D TARGET_ARM -I../stateengine/src -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../stateengine/src/fsm.c -o fsm.o
+adc.o: ../common/adc.c
+	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/adc.c -o adc.o
 display.o: ../common/display.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/display.c -o display.o
 i2c.o: ../common/i2c.c
@@ -20,7 +22,7 @@ i2c.o: ../common/i2c.c
 clock.o: ../common/clock.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/clock.c -o clock.o
 clean:
-	rm startup.o conway.elf conway.bin conway.o conway.map vectors.o i2c.o life.o clock.o fsm.o display.o
+	rm startup.o conway.elf conway.bin conway.o conway.map vectors.o i2c.o life.o clock.o fsm.o display.o adc.o
 debug:
 	openocd -f /usr/share/openocd/scripts/interface/jlink.cfg -c "transport select swd" -f /usr/share/openocd/scripts/target/at91samdXX.cfg
 flash:
