adc controlling speed of GOL

--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,14 +1,14 @@
 conway.bin: conway.elf
 	arm-none-eabi-objcopy -Obinary conway.elf conway.bin
 conway.elf: fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o startup.o ../common/trinket.ld
-	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -o conway.elf startup.o fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib
+	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -L /usr/lib/gcc/arm-none-eabi/12.1.0/ -o conway.elf startup.o fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib -lgcc 
 	arm-none-eabi-objdump -t conway.elf
 startup.o: ../common/startup.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb ../common/startup.s -o startup.o
 vectors.o: ../common/vectors.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb  ../common/vectors.s -o vectors.o
 conway.o: conway.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c conway.c -o conway.o
+	arm-none-eabi-gcc -std=gnu11 -O0 -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c conway.c -o conway.o
 life.o: ../../../conway/life/life.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../../../conway/life/life.c -o life.o -ffreestanding
 fsm.o: ../stateengine/src/fsm.c
