--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,7 +1,7 @@
 conway.bin: conway.elf
 	arm-none-eabi-objcopy -Obinary conway.elf conway.bin
-conway.elf: fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o startup.o ../common/trinket.ld
-	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -L /usr/lib/gcc/arm-none-eabi/12.1.0/ -o conway.elf startup.o fsm.o clock.o i2c.o display.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib -lgcc 
+conway.elf: fsm.o clock.o i2c.o display.o timer.o adc.o life.o conway.o vectors.o startup.o ../common/trinket.ld
+	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -L /usr/lib/gcc/arm-none-eabi/12.1.0/ -o conway.elf startup.o fsm.o clock.o i2c.o display.o timer.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib -lgcc 
 	arm-none-eabi-objdump -t conway.elf
 startup.o: ../common/startup.s
 	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb ../common/startup.s -o startup.o
@@ -15,6 +15,8 @@ fsm.o: ../stateengine/src/fsm.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -D TARGET_ARM -I../stateengine/src -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../stateengine/src/fsm.c -o fsm.o
 adc.o: ../common/adc.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/adc.c -o adc.o
+timer.o: ../common/timer.c
+	arm-none-eabi-gcc -std=gnu11 -O0 -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/timer.c -o timer.o
 display.o: ../common/display.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/display.c -o display.o
 i2c.o: ../common/i2c.c
@@ -22,7 +24,7 @@ i2c.o: ../common/i2c.c
 clock.o: ../common/clock.c
 	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/clock.c -o clock.o
 clean:
-	rm startup.o conway.elf conway.bin conway.o conway.map vectors.o i2c.o life.o clock.o fsm.o display.o adc.o
+	rm startup.o conway.elf conway.bin conway.o conway.map vectors.o i2c.o life.o clock.o fsm.o display.o adc.o timer.o
 debug:
 	openocd -f /usr/share/openocd/scripts/interface/jlink.cfg -c "transport select swd" -f /usr/share/openocd/scripts/target/at91samdXX.cfg
 flash:
