--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,35 +1,53 @@
-conway.bin: conway.elf
+NAME = conway
+TARGET = TARGET_SAMD21
+
+SRC =  conway.c fsm.c clock.c life.c adc.c timer.c i2c.c display.c
+OBJ = $(SRC:.c=.o)
+
+CC = arm-none-eabi-gcc
+ASM = arm-none-eabi-as
+
+SRCDIR = ../common
+STATE_ENGINE_DIR = ../stateengine/src
+LIFE_DIR = ../conway/life
+
+CFLAGS = -std=gnu11 -Wall -Ofast -g -I../common -I../stateengine/src -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM
+ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
+LDFLAGS = -print-memory-usage -nostdlib --gc-sections
+
+COMMON_DIR = ../common
+
+STARTUP_STM32 = m0plus_vectors.o stm32_vectors.o startup.o
+STARTUP_SAMD21 = m0plus_vectors.o samd21_vectors.o startup.o
+
+$(NAME).bin: $(NAME).elf
 	arm-none-eabi-objcopy -Obinary conway.elf conway.bin
-conway.elf: fsm.o clock.o i2c.o display.o timer.o adc.o life.o conway.o vectors.o startup.o ../common/trinket.ld
-	arm-none-eabi-ld -Map conway.map -T../common/trinket.ld -L /usr/lib/gcc/arm-none-eabi/12.1.0/ -o conway.elf startup.o fsm.o clock.o i2c.o display.o timer.o adc.o life.o conway.o vectors.o -print-memory-usage -nostdlib -lgcc 
-	arm-none-eabi-objdump -t conway.elf
-startup.o: ../common/startup.s
-	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb ../common/startup.s -o startup.o
-vectors.o: ../common/vectors.s
-	arm-none-eabi-as -g -mcpu=cortex-m0plus -mthumb  ../common/vectors.s -o vectors.o
-conway.o: conway.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c conway.c -o conway.o
-life.o: ../../../conway/life/life.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../../../conway/life/life.c -o life.o -ffreestanding
-fsm.o: ../stateengine/src/fsm.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -D TARGET_ARM -I../stateengine/src -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../stateengine/src/fsm.c -o fsm.o
-adc.o: ../common/adc.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/adc.c -o adc.o
-timer.o: ../common/timer.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/timer.c -o timer.o
-display.o: ../common/display.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/display.c -o display.o
-i2c.o: ../common/i2c.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/i2c.c -o i2c.o
-clock.o: ../common/clock.c
-	arm-none-eabi-gcc -std=gnu11 -Ofast -Wall  -g -I../common -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -c ../common/clock.c -o clock.o
+ifeq ($(TARGET), TARGET_STM32)
+$(NAME).elf: $(OBJ) $(STARTUP_STM32) ../common/stm32.ld
+	echo "STM32 Target Selected"
+	arm-none-eabi-ld -Map $(NAME).map -T../common/stm32.ld -o $(NAME).elf $(OBJ) $(STARTUP_STM32) $(LDFLAGS)
+else
+$(NAME).elf: $(OBJ) $(STARTUP_SAMD21) ../common/trinket.ld
+	echo "Defaulting to SAMD21"
+	arm-none-eabi-ld -Map $(NAME).map -T../common/trinket.ld -o $(NAME).elf $(OBJ) $(STARTUP_SAMD21) $(LDFLAGS)
+endif
+%.o : $(COMMON_DIR)/%.s
+	$(ASM) -c $(ASMFLAGS) -o $@ $<
+%.o : $(STATE_ENGINE_DIR)/%.c
+	$(CC) -c $(CFLAGS) -o $@ $<
+%.o : $(LIFE_DIR)/%.c
+	$(CC) -c $(CFLAGS) -o $@ $<
+%.o : $(COMMON_DIR)/%.c
+	$(CC) -c $(CFLAGS) -o $@ $<
 clean:
-	rm startup.o conway.elf conway.bin conway.o conway.map vectors.o i2c.o life.o clock.o fsm.o display.o adc.o timer.o
+	rm *.o *.elf *.map *.bin
 debug:
-	openocd -f /usr/share/openocd/scripts/interface/jlink.cfg -c "transport select swd" -f /usr/share/openocd/scripts/target/at91samdXX.cfg
+	openocd -f /usr/share/openocd/scripts/interface/stlink.cfg -f /usr/share/openocd/scripts/target/stm32g0x.cfg
 flash:
-	openocd -f /usr/share/openocd/scripts/interface/jlink.cfg -c "transport select swd" -f /usr/share/openocd/scripts/target/at91samdXX.cfg -c "program conway.bin exit 0x00000000 verify reset exit"
+	openocd -f /usr/share/openocd/scripts/interface/stlink.cfg -f /usr/share/openocd/scripts/target/stm32g0x.cfg -c "program conway.bin exit 0x08000000 verify reset"
 gdb:
-	arm-none-eabi-gdb -ex "target remote localhost:3333" conway.elf
+	arm-none-eabi-gdb -ex "target extended-remote localhost:3333" conway.elf
 dump:
 	hexdump -C conway.bin
+objdump:
+	arm-none-eabi-objdump -t conway.elf
