removing ADC functionality for now

--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,7 +1,7 @@
 NAME = conway
 TARGET = TARGET_STM32
 
-SRC =  conway.c fsm.c clock.c life.c adc.c timer.c i2c.c display.c
+SRC =  conway.c fsm.c clock.c life.c timer.c i2c.c display.c
 OBJ = $(SRC:.c=.o)
 
 CC = arm-none-eabi-gcc
