--- a/blink/Makefile
+++ b/blink/Makefile
@@ -1,5 +1,5 @@
 NAME = blink
-TARGET = TARGET_STM32
+TARGET = TARGET_STM32F4
 
 SRC =  blink.c systick.c
 OBJ = $(SRC:.c=.o)
@@ -7,30 +7,50 @@ OBJ = $(SRC:.c=.o)
 CC = arm-none-eabi-gcc
 ASM = arm-none-eabi-as
 
-SRCDIR = ../common
-
-CFLAGS = -std=gnu11 -Wall  -g -I../common -I../stateengine/src -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM
-ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
-LDFLAGS = -print-memory-usage -nostdlib --gc-sections
-
 STATE_ENGINE_DIR = ../stateengine/src
 COMMON_DIR = ../common
 
+ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
+
+ifeq ($(TARGET), TARGET_STM32F4)
+HAL_DIR = ../hal/stmf4
+ASMFLAGS = -g -mcpu=cortex-m4 -mthumb 
+TARGET_CPU = cortex-m4
+else
+HAL_DIR = ../common
+TARGET_CPU = cortex-m0plus
+endif
+
+CFLAGS = -std=gnu11 -Wall  -g -I$(COMMON_DIR) -I$(HAL_DIR) -I../stateengine/src -nostdlib -nostartfiles -mcpu=$(TARGET_CPU) -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM
+LDFLAGS = -print-memory-usage -nostdlib --gc-sections
+
+
+
 STARTUP_STM32 = m0plus_vectors.o stm32_vectors.o startup.o
+STARTUP_STM32F4 = m4_vectors.o target_vectors.o startup.o
 STARTUP_SAMD21 =  ../common/m0plus_vectors.o ../common/samd21_vectors.o ../common/startup.o
 
 $(NAME).bin: $(NAME).elf
 	arm-none-eabi-objcopy -Obinary blink.elf blink.bin
+
 ifeq ($(TARGET), TARGET_STM32)
-$(NAME).elf: $(OBJ) $(STARTUP_STM32) ../common/stm32.ld
+$(NAME).elf: $(OBJ) $(STARTUP_STM32) $(HAL_DIR)/stm32.ld
 	echo "STM32 Target Selected"
-	arm-none-eabi-ld -Map $(NAME).map -T../common/stm32.ld -o $(NAME).elf $(OBJ) $(STARTUP_STM32) $(LDFLAGS)
+	arm-none-eabi-ld -Map $(NAME).map -T$(HAL_DIR)/stm32.ld -o $(NAME).elf $(OBJ) $(STARTUP_STM32) $(LDFLAGS)
+
+else ifeq ($(TARGET), TARGET_STM32F4)
+$(NAME).elf: $(OBJ) $(STARTUP_STM32F4) $(HAL_DIR)/memory.ld
+	echo "STM32F4 Target Selected"
+	arm-none-eabi-ld -Map $(NAME).map -T$(HAL_DIR)/memory.ld -o $(NAME).elf $(OBJ) $(STARTUP_STM32F4) $(LDFLAGS)
+
 else
 $(NAME).elf: $(OBJ) $(STARTUP_SAMD21) m0.ld
 	echo "Defaulting to SAMD21"
 	arm-none-eabi-ld -Map $(NAME).map -Tm0.ld -o $(NAME).elf $(OBJ) $(STARTUP_SAMD21) $(LDFLAGS)
 endif
 %.o : $(COMMON_DIR)/%.s
+	$(ASM) -c $(ASMFLAGS) -o $@ $<
+%.o : $(HAL_DIR)/%.s
 	$(ASM) -c $(ASMFLAGS) -o $@ $<
 %.o : $(STATE_ENGINE_DIR)/%.c
 	$(CC) -c $(CFLAGS) -o $@ $<
