--- a/gol/Makefile
+++ b/gol/Makefile
@@ -1,7 +1,7 @@
 NAME = conway
 TARGET = TARGET_STM32
 
-SRC =  conway.c fsm.c clock.c life.c timer.c i2c.c display.c systick.c
+SRC =  conway.c events.c state.c clock.c life.c timer.c i2c.c display.c systick.c
 OBJ = $(SRC:.c=.o)
 
 CC = arm-none-eabi-gcc
@@ -12,7 +12,7 @@ SRCDIR = ../common
 STATE_ENGINE_DIR = ../boilerplate/src
 LIFE_DIR = ../conway/life
 
-CFLAGS = -std=gnu11 -Wall -c -O3 -g -I../common -I../boilerplate/src -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM
+CFLAGS = -std=gnu11 -Wall -Wfatal-errors -c -O3 -g -I../common -I../boilerplate/src -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM
 ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
 LDFLAGS = -print-memory-usage -nostdlib --gc-sections
 
