restore original optimisation

--- a/gol/Makefile
+++ b/gol/Makefile
@@ -11,8 +11,9 @@ HAL_DIR = ../hal/stm32g0
 SRCDIR = ../common
 STATE_ENGINE_DIR = ../boilerplate/src
 LIFE_DIR = ../conway/life
+OPT = -O3
 
-CFLAGS = -std=gnu11 -Wall -Wfatal-errors -c -O0 -g -I../common -I../boilerplate/src -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM -D NDEBUG
+CFLAGS = -std=gnu11 -Wall -Wfatal-errors -c $(OPT) -g -I../common -I../boilerplate/src -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM -D NDEBUG
 ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
 LDFLAGS = -print-memory-usage -nostdlib --gc-sections
 
