--- a/gol/Makefile
+++ b/gol/Makefile
@@ -9,11 +9,11 @@ ASM = arm-none-eabi-as
 
 HAL_DIR = ../hal/stm32g0
 SRCDIR = ../common
-STATE_ENGINE_DIR = ../boilerplate/src
+BOILERPLATE_DIR = ../boilerplate/src
 LIFE_DIR = ../conway/life
 OPT = -O3
 
-CFLAGS = -std=gnu11 -Wall -Wfatal-errors -c $(OPT) -g -I../common -I../boilerplate/src -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM -D NDEBUG
+CFLAGS = -std=gnu11 -Wall -Wfatal-errors -c $(OPT) -g -I$(LIFE_DIR) -I$(SRCDIR) -I$(HAL_DIR) -I$(BOILERPLATE_DIR) -ffreestanding -nostdlib -nostartfiles -mcpu=cortex-m0plus -mthumb -fdata-sections -ffunction-sections -D $(TARGET) -D TARGET_ARM -D NDEBUG
 ASMFLAGS = -g -mcpu=cortex-m0plus -mthumb 
 LDFLAGS = -print-memory-usage -nostdlib --gc-sections
 
@@ -32,7 +32,7 @@ $(NAME).elf: $(OBJ) $(STARTUP_STM32) ../common/stm32.ld
 	$(ASM) -c $(ASMFLAGS) -o $@ $<
 %.o : $(HAL_DIR)/%.c
 	$(CC) -c $(CFLAGS) -o $@ $<
-%.o : $(STATE_ENGINE_DIR)/%.c
+%.o : $(BOILERPLATE_DIR)/%.c
 	$(CC) $(CFLAGS) -o $@ $<
 %.o : $(LIFE_DIR)/%.c
 	$(CC) $(CFLAGS) -o $@ $<
